# citation-cliques-latex

./: .gitignore  Chnages.txt  Makefile  README.md  author_behavior_metrics.sql  author_matched_candidates.sql  author_matched_pairs.sql  author_profiles.sql  author_subject_h5_index.sql  author_works_master.sql  citation_analysis.py  citation_anomalies.sql  citation_network_final.sql  cited_authors_counts.sql  citing_authors_counts.sql  coauthor_links.sql  diagrams.py  eigenfactor_percentiles.sql  filtered_authors.sql  investigate_authors.py  main.bbl-SAVE-ERROR  main.tex  matched_authors.sql  micro_edges.sql  pyproject.toml  references.bib  relevant_works.sql  resolved_refs.sql  run_pipeline.sh  suspicious_authors_section.tex  todos.txt  work_citations.sql  works_doi_map.sql  works_enhanced.sql
panos/: main.tex
